    \code{vignette("hhh4_spacetime")}). The unstructured distance
    weights \code{W_np()} gained \code{from0} support as well.
  }
}

\subsection{MINOR CHANGES}{
  \itemize{
    \item \code{W_np()}'s argument \code{to0} has been renamed to
    \code{truncate}. The old name still works but is deprecated.
  }
}

\subsection{BUG FIXES}{
  \itemize{
    \item Using negative indices to exclude time points from an
    \code{"sts"} object (e.g., \code{x[-1,]}) is now supported and
    equivalent to the corresponding subset expression of retained
    indexes (\code{x[2:nrow(x),]}) in resetting the \code{start} and
    \code{epoch} slots. [reported by Johannes Bracher]

    \item The supplementary p-values returned by \code{farringtonFlexible()}
    were wrong for the default approach, where \code{thresholdMethod="delta"}
    (i.e., the original Farrington method) and a power transformation
    was applied to the data (\code{powertrans != "none"}).
    [reported by Lore Merdrignac]

    \item \code{epidataCS2sts()} no longer transfers the
    \code{stgrid$BLOCK} indices to the \code{epoch} slot of the
    resulting \code{"sts"} object (to avoid \code{epoch[1] != 1}
    scenarios).
  }
}

}


\section{Changes in surveillance version 1.16.2 (2018-07-24)}{

\subsection{MINOR CHANGES}{
  \itemize{
    \item \code{autoplot.sts()} gained a \code{width} argument to adjust
    the bar width, which now defaults to 7 for weekly time series
    (previously was 90\% of that so there were gaps between the bars).
    
    \item \code{"epidataCS"} generation now (again) employs
    \CRANpkg{spatstat}'s \code{bdist.points()}, which has been
    accelerated in version 1.56-0. If you use the
    \code{twinstim()}-related modelling part of \pkg{surveillance}, you
    are thus advised to update your \pkg{spatstat} installation.

    \item The \code{boda()} examples in
    \code{vignette("monitoringCounts")} have been updated to also work
    with recent versions of \pkg{INLA}.
  }
}
