@@ -226,8 +226,6 @@ March 2015 update vignette("hhh4") according to JSS paper
            in algo.farrington() and farringtonFlexible()
 14/09/2018 pairedbinCUSUM does not update epoch and control slots
 14/09/2018 pairedbinCUSUM and categoricalCUSUM should use [.sts
-12/12/2018 farringtonFlexible() only fills the last column of
-           @control$pvalue etc if there are multiple units
 
 #======================================================================
 #======================================================================
